2010-10-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nnimap.el (gnutls-negotiate): Silence the byte compiler.

	* gnus-art.el, gnus-cache.el, gnus-fun.el, gnus-group.el,
	gnus-picon.el, gnus-spec.el, gnus-sum.el, gnus-util.el, gnus.el,
	mail-source.el, message.el, mm-bodies.el, mm-decode.el, mm-extern.el,
	mm-util.el, mm-view.el, mml-smime.el, mml.el, mml1991.el, mml2015.el,
	nnfolder.el, nnheader.el, nnmail.el, nnmaildir.el, nnrss.el, nntp.el,
	rfc1843.el, sieve-manage.el, smime.el, spam.el:
	Fix comment for declare-function.

2010-10-11  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-request-rename-group): Select group read-only
	before renaming it.

	* shr.el (shr-insert): Fix up the white space only regexp.

	* nnimap.el (nnimap-transform-split-mail): Not all articles have
	bodies.  Protect against this.  Reported by Michael Welsh Duggan.

	* shr.el (shr-current-column): New function.
	(shr-find-fill-point): New function.

2010-10-11  Michael Welsh Duggan  <md5i@md5i.com>  (tiny change)

	* sieve-manage.el (sieve-manage-open): Allow port names as well as port
	numbers.

2010-10-11  Julien Danjou  <julien@danjou.info>

	* shr.el (shr-hr-line): Add.
	(shr-tag-hr): Use shr-hr-line to specify which character to use to
	display hr lines.
	(shr-max-columns): Do not change state to nil if we just inserting
	spaces.

2010-10-11  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-topic.el (gnus-topic-read-group): If after the last group,
	select the last group.

2010-10-11  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-int.el (gnus-run-hook-with-args): Autoload from gnus-util.el.

2010-10-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-update-qresync-info): \Flagged messages are read
	for Gnus.
	(nnimap-retrieve-group-data-early): utf7-encode the group parameters.
	(nnimap-update-qresync-info): Mark \Seen articles as read.

	* gnus-sum.el (gnus-summary-set-local-parameters): Ignore the `active'
	non-variable, too.
